# CI_RCT

./: .gitignore  LICENSE  README.md
ci/: pyproject.toml
ci/script/: README.md  rct.ipynb  run_bandits.py  run_lab3.py
ci/src/ci/: __init__.py  active_ci.py  eps_greedy.py  nrct.py  rct.py  thompson.py  util.py  util_stats.py
ci/src/ci/rct_example/: __init__.py  online_classroom.py
